@@ -1,6 +1,7 @@
 package nguvihuong.crawler;
 
 import nguvihuong.model.Product;
+import static nguvihuong.utils.BrandList.BRANDS;
 
 import org.openqa.selenium.By;
 import org.openqa.selenium.WebDriver;
@@ -13,17 +14,18 @@ import java.io.*;
 import com.fasterxml.jackson.databind.ObjectMapper;
 
 public class CrawlInfo {
-    public static void crawl(WebDriver driver, String url, List<Product> productInfo) {
+    public static void crawl(WebDriver driver, String url, Map<String, Product> productInfo) {
         System.out.println("=====================================");
-        String[] brands = {"Google", "Samsung", "Apple", "Xiaomi", "OnePlus"};
-
         driver.get(url);
 
         // get title
         String name = (driver.findElement(By.className("specs-phone-name-title"))).getDomProperty("textContent");
         if (name != null) {
-            for (String brand : brands) {
-                name = name.replace(brand, "").trim();
+            for (String brand : BRANDS) {
+                if (name.startsWith(brand + " ")) {
+                    name = name.substring(brand.length()).trim();
+                    break;
+                }
             }
         }
         System.out.println(name);
@@ -51,11 +53,10 @@ public class CrawlInfo {
                         List<WebElement> nfoElements = tr.findElements(By.cssSelector("td.nfo"));
 
                         if (!ttlElements.isEmpty() && !nfoElements.isEmpty()) {
-                            String ttl = ttlElements.get(0).getDomProperty("textContent");
-                            String nfo = nfoElements.get(0).getDomProperty("textContent").trim();
+                            String ttl = ttlElements.getFirst().getDomProperty("textContent");
+                            String nfo = nfoElements.getFirst().getDomProperty("textContent").trim();
 
                             specs.put(ttl, nfo);
-                            System.out.println("\"" + ttl + "\": \"" + nfo + "\"");
                         }
                     } catch (Exception e) {
                         System.out.println("Error processing a table row: " + e.getMessage());
@@ -64,12 +65,17 @@ public class CrawlInfo {
             }
         }
 
-        for (Product product : productInfo) {
-            if (product.getName().equals(name)) {
-                for (Map.Entry<String, String> entry : specs.entrySet()) {
-                    product.setInfo(entry.getKey(), entry.getValue());
-                }
+        Product product = null;
+        for (String keyName : productInfo.keySet()) {
+            if (name != null && name.equals(keyName)) {
+                product = productInfo.get(keyName);
                 break;
+            }
+        }
+
+        if (product != null) {
+            for (Map.Entry<String, String> entry : specs.entrySet()) {
+                product.setInfo(entry.getKey(), entry.getValue());
             }
         }
     }
@@ -79,10 +85,13 @@ public class CrawlInfo {
         ObjectMapper mapper = new ObjectMapper();
         File file = new File(fileName);
         List<Map<String, Object>> products = mapper.readValue(file, List.class);
-        for (int i = 0; i < products.size(); i++) {
+
+        int minSize = Math.min(products.size(), productInfo.size());
+
+        for (int i = 0; i < minSize; i++) {
             Map<String, Object> product = products.get(i);
 
-            // check if the product contains a "info" field
+            // check if the product contains an "info" field
             if (product.get("info") == null || ((Map<?, ?>) product.get("info")).isEmpty()) {
                 Map<String, String> specs = productInfo.get(i).getInfo();
                 if (specs != null && !specs.isEmpty()) {
@@ -92,5 +101,7 @@ public class CrawlInfo {
         }
         mapper.writerWithDefaultPrettyPrinter().writeValue(file, products);
         System.out.println("Data successfully exported to " + fileName);
+        System.out.println("JSON products size: " + products.size());
+        System.out.println("Collected productInfo size: " + productInfo.size());
     }
 }
